Fix cache policy and add less memory consuming approach